<?xml version="1.0" encoding="utf-8"?>
<TextView android:textSize="26dp"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"

    android:textColor="@color/dark"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/textTime"
    tools:ignore="SpUsage"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" />

