<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/oval_button"
    android:orientation="vertical">

    <TextView
        android:layout_gravity="center"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Описание"
        android:textColor="@color/blue"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLength="20"
        android:maxLines="1"
        android:textColor="@color/blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:id="@+id/OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/oval_button"
            android:text="OK"
            android:textColor="@color/blue" />

        <Button
            android:layout_weight="1"
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/oval_button"

            android:text="Отмена"
            android:textColor="@color/blue" />

    </LinearLayout>
</LinearLayout>